// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`render renders with gap param 1`] = `
<div
  className="sc-htpNat dHlViD"
/>
`;

exports[`render renders with strings 1`] = `
<div
  className="sc-bxivhb eplySp"
/>
`;

exports[`render renders with width param 1`] = `
<div
  className="sc-bwzfXH eUKrTX"
/>
`;

exports[`render renders without crashing 1`] = `
<div
  className="sc-bdVaJa hBXCpH"
/>
`;
